@@ -35,9 +35,9 @@
     <module id="deskbar-applet" branch="gnome-2-14"/>
     <module id="eel"/>
     <module id="ekiga"/>
-    <module id="eog"/>
+    <module id="eog" branch="gnome-2-14"/>
     <module id="epiphany" branch="gnome-2-14"/>
-    <module id="evince"/>
+    <module id="evince" branch="gnome-2-14"/>
     <module id="evolution" branch="gnome-2-14"/>
     <module id="evolution-data-server" branch="gnome-2-14"/>
     <module id="evolution-exchange" branch="gnome-2-14"/>
@@ -88,7 +88,7 @@
     <module id="vino"/>
     <module id="vte"/>
     <module id="yelp" branch="gnome-2-14" />
-    <module id="zenity"/>
+    <module id="zenity" branch="gnome-2-14"/>
   </category>
   
   <category id="admin">
