@@ -1,5 +1,7 @@
 2006-03-13  Danilo Šegan  <danilo@gnome.org>
 
+	* releases.xml.in: branch evince, eog, zenity.
+
 	* update-stats.py (LocStatistics.ui_l10n_stats): Use hidden languages when updating.
 	* view-module.py (get_stats_for): List hidden languages in modules as well.
 
